add module dependencies
